faltava css sceipt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>APRENDENDO 5</title>
   </head>
   <div>
@@ -52,6 +53,6 @@
         </div>
     </div>
     <div id="container-data"></div>
-    <script src="./js/scripts.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
