--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
             <div id="q7">Sem Formação Definida</div>
             <p id="qsd">0</p>
         </div>
+        <div id="qtde-unica">
+            <div id="q7">Cadastros HOJE</div>
+            <p id="qc">0</p>
+        </div>
+        <div id="qtde-unica">
+            <div id="q7">Cadastros ONTEM</div>
+            <p id="qco">0</p>
+        </div>
     </div>
     <div id="container-data"></div>
     <script src="./js/script.js"></script>
